# fastapi-template

./: .dockerignore  .env.local  .env.production  .env.staging  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: const.py  crud.py  dtos.py  main.py  models.py
app/api/: deps.py  main.py
app/api/routers/: file.py  private.py  user.py  utils.py
app/core/: config.py  db.py
app/utils/: datetime_utils.py  docker_utils.py  file_utils.py  list_utils.py
docs/: deploy.md
docs/database/: database-schema.sql
