[project]
name = "fastapi-template"
version = "0.1.0"
description = "fastapi-template"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "tzdata>=2026.1",
    "uvicorn-worker>=0.4.0",
]

[[tool.uv.index]]
name = "nju-mirror"
url = "https://mirror.nju.edu.cn/pypi/web/simple"
default = true
